tests/tests/c_reference_project/reference_project.h


typedef enum ENUMDOCUMENTED
    {
    ENUMDOCUMENTED_A = 0,
    ENUMDOCUMENTED_B = 1,
    ENUMDOCUMENTED_C = 2,
    } ENUMDOCUMENTED;
typedef enum ENUMRENAMED
    {
    ENUMRENAMED_X = 0,
    } ENUMRENAMED;
typedef struct BASICSERVICE BASICSERVICE;
typedef struct GENERIC2U8 GENERIC2U8;
typedef struct GENERIC3 GENERIC3;
typedef struct GENERIC4 GENERIC4;
typedef struct SERVICECALLBACKS SERVICECALLBACKS;
typedef struct SERVICEIGNORINGMETHODS SERVICEIGNORINGMETHODS;
typedef struct SERVICEMULTIPLECTORS SERVICEMULTIPLECTORS;
typedef struct SERVICEONPANIC SERVICEONPANIC;
typedef struct SERVICESTRINGS SERVICESTRINGS;
typedef struct SERVICEUSINGLIFETIMES SERVICEUSINGLIFETIMES;
typedef struct SERVICEVARIOUSSLICES SERVICEVARIOUSSLICES;
typedef enum FFIERROR
    {
    FFIERROR_OK = 0,
    FFIERROR_NULL = 100,
    FFIERROR_PANIC = 200,
    FFIERROR_DELEGATE = 300,
    FFIERROR_FAIL = 400,
    } FFIERROR;
typedef struct BOOLFIELD
    {
    bool val;
    } BOOLFIELD;
typedef struct INNER
    {
    float x;
    } INNER;
typedef struct PACKED1
    {
    uint8_t x;
    uint16_t y;
    } PACKED1;
typedef struct PACKED2
    {
    uint16_t y;
    uint8_t x;
    } PACKED2;
typedef struct PHANTOMU8
    {
    uint32_t x;
    } PHANTOMU8;
typedef struct STRUCTDOCUMENTED
    {
    float x;
    } STRUCTDOCUMENTED;
typedef struct STRUCTRENAMED
    {
    ENUMRENAMED e;
    } STRUCTRENAMED;
typedef struct TUPLED
    {
    uint8_t x0;
    } TUPLED;
typedef struct VEC
    {
    double x;
    double z;
    } VEC;
typedef struct VEC1
    {
    float x;
    float y;
    } VEC1;
typedef struct VEC2
    {
    double x;
    double z;
    } VEC2;
typedef struct VEC3F32
    {
    float x;
    float y;
    float z;
    } VEC3F32;
typedef struct WEIRD1U32
    {
    uint32_t x;
    } WEIRD1U32;
typedef uint8_t (*fptr_fn_u8_rval_u8)(uint8_t x0);
typedef uint32_t (*MYCALLBACK)(uint32_t VALUE);
typedef uint32_t (*MYCALLBACKNAMESPACED)(uint32_t VALUE);
typedef void (*SUMDELEGATE1)();
typedef int32_t (*SUMDELEGATE2)(int32_t X, int32_t Y);
typedef FFIERROR (*SUMDELEGATERETURN)(int32_t X, int32_t Y);
typedef void (*SUMDELEGATERETURN2)(int32_t X, int32_t Y);
typedef struct ARRAY
    {
    uint8_t data[16];
    } ARRAY;
typedef struct CHARARRAY
    {
    char str[32];
    char str_2[32];
    } CHARARRAY;
typedef struct GENERICU32
    {
    const uint32_t* x;
    } GENERICU32;
typedef struct GENERICU8
    {
    const uint8_t* x;
    } GENERICU8;
typedef struct WEIRD2U8
    {
    uint8_t t;
    uint8_t a[5];
    const uint8_t* r;
    } WEIRD2U8;
typedef struct SLICEI32
    {
    const int32_t* data;
    uint64_t len;
    } SLICEI32;
typedef struct SLICEU32
    {
    const uint32_t* data;
    uint64_t len;
    } SLICEU32;
typedef struct SLICEU8
    {
    const uint8_t* data;
    uint64_t len;
    } SLICEU8;
typedef struct SLICEMUTU32
    {
    const uint32_t* data;
    uint64_t len;
    } SLICEMUTU32;
typedef struct SLICEMUTU8
    {
    const uint8_t* data;
    uint64_t len;
    } SLICEMUTU8;
typedef struct OPTIONINNER
    {
    INNER t;
    uint8_t is_some;
    } OPTIONINNER;
typedef struct OPTIONVEC
    {
    VEC t;
    uint8_t is_some;
    } OPTIONVEC;
typedef void (*MYCALLBACKVOID)(const void* PTR);
typedef struct NESTEDARRAY
    {
    ENUMRENAMED field_enum;
    VEC3F32 field_vec;
    bool field_bool;
    int32_t field_int;
    uint16_t field_array[5];
    uint16_t field_array_2[5];
    ARRAY field_struct;
    } NESTEDARRAY;
typedef struct SLICEUSEASCIISTRINGPATTERN
    {
    const USEASCIISTRINGPATTERN* data;
    uint64_t len;
    } SLICEUSEASCIISTRINGPATTERN;
typedef struct SLICEVEC
    {
    const VEC* data;
    uint64_t len;
    } SLICEVEC;
typedef struct SLICEVEC3F32
    {
    const VEC3F32* data;
    uint64_t len;
    } SLICEVEC3F32;
typedef struct SLICEMUTVEC
    {
    const VEC* data;
    uint64_t len;
    } SLICEMUTVEC;
typedef uint8_t (*CALLBACKFFISLICE)(SLICEU8 SLICE);
typedef VEC3F32 (*CALLBACKHUGEVECSLICE)(SLICEVEC3F32 SLICE);
void primitive_void();
void primitive_void2();
bool primitive_bool(bool X);
uint8_t primitive_u8(uint8_t X);
uint16_t primitive_u16(uint16_t X);
uint32_t primitive_u32(uint32_t X);
uint64_t primitive_u64(uint64_t X);
int8_t primitive_i8(int8_t X);
int16_t primitive_i16(int16_t X);
int32_t primitive_i32(int32_t X);
int64_t primitive_i64(int64_t X);
PACKED2 packed_to_packed1(PACKED1 A);
int64_t many_args_5(int64_t X0, int64_t X1, int64_t X2, int64_t X3, int64_t X4);
int64_t many_args_10(int64_t X0, int64_t X1, int64_t X2, int64_t X3, int64_t X4, int64_t X5, int64_t X6, int64_t X7, int64_t X8, int64_t X9);
const int64_t* ptr(const int64_t* X);
int64_t* ptr_mut(int64_t* X);
const const int64_t** ptr_ptr(const const int64_t** X);
const int64_t* ref_simple(const int64_t* X);
int64_t* ref_mut_simple(int64_t* X);
bool ref_option(const int64_t* X);
bool ref_mut_option(int64_t* X);
TUPLED call_tupled(TUPLED X);
FFIERROR complex_args_1(VEC3F32 A, const TUPLED* B);
uint8_t callback(fptr_fn_u8_rval_u8 CALLBACK, uint8_t VALUE);
uint32_t generic_1a(GENERICU32 X, PHANTOMU8 Y);
uint8_t generic_1b(GENERICU8 X, PHANTOMU8 Y);
uint8_t generic_1c(const GENERICU8* X, const GENERICU8* Y);
uint8_t generic_2(const GENERIC2U8* X);
uint8_t generic_3(const GENERIC3* X);
uint8_t generic_4(const GENERIC4* X);
uint8_t array_1(ARRAY X);
ARRAY array_2();
NESTEDARRAY nested_array_1();
uint8_t nested_array_3(NESTEDARRAY INPUT);
CHARARRAY char_array_1();
CHARARRAY char_array_2(CHARARRAY ARR);
uint8_t char_array_3(const CHARARRAY* ARR);
bool bool_field(BOOLFIELD X);
ENUMDOCUMENTED documented(STRUCTDOCUMENTED X);
VEC1 ambiguous_1(VEC1 X);
VEC2 ambiguous_2(VEC2 X);
bool ambiguous_3(VEC1 X, VEC2 Y);
VEC namespaced_type(VEC X);
OPTIONVEC namespaced_inner_option(OPTIONVEC X);
SLICEVEC namespaced_inner_slice(SLICEVEC X);
SLICEMUTVEC namespaced_inner_slice_mut(SLICEMUTVEC X);
FFIERROR panics();
ENUMRENAMED renamed(STRUCTRENAMED X);
bool weird_1(WEIRD1U32 X, WEIRD2U8 Y);
TUPLED repr_transparent(TUPLED X, const TUPLED* R);
uint32_t pattern_ascii_pointer_1(const char* X);
const char* pattern_ascii_pointer_2();
const char* pattern_ascii_pointer_3(const char* X);
const char* pattern_ascii_pointer_4(const char* X, uint32_t L);
uint8_t pattern_ascii_pointer_5(const char* X, uint32_t I);
SLICEUSEASCIISTRINGPATTERN pattern_ascii_pointer_return_slice();
uint32_t pattern_ffi_slice_1(SLICEU32 FFI_SLICE);
uint32_t pattern_ffi_slice_1b(SLICEMUTU32 FFI_SLICE);
VEC3F32 pattern_ffi_slice_2(SLICEVEC3F32 FFI_SLICE, int32_t I);
uint8_t pattern_ffi_slice_delegate(CALLBACKFFISLICE CALLBACK);
VEC3F32 pattern_ffi_slice_delegate_huge(CALLBACKHUGEVECSLICE CALLBACK);
OPTIONINNER pattern_ffi_option_1(OPTIONINNER FFI_SLICE);
INNER pattern_ffi_option_2(OPTIONINNER FFI_SLICE);
uint8_t pattern_ffi_bool(uint8_t FFI_BOOL);
char pattern_ffi_cchar(char FFI_CCHAR);
const char* pattern_ffi_cchar_const_pointer(const char* FFI_CCHAR);
char* pattern_ffi_cchar_mut_pointer(char* FFI_CCHAR);
uint64_t pattern_api_guard();
uint32_t pattern_callback_1(MYCALLBACK CALLBACK, uint32_t X);
MYCALLBACKVOID pattern_callback_2(MYCALLBACKVOID CALLBACK);
uint32_t pattern_callback_4(MYCALLBACKNAMESPACED CALLBACK, uint32_t X);
SUMDELEGATE1 pattern_callback_5();
SUMDELEGATE2 pattern_callback_6();
FFIERROR pattern_callback_7(SUMDELEGATERETURN C1, SUMDELEGATERETURN2 C2, int32_t X, int32_t I, int32_t* O);
FFIERROR basic_service_destroy(BASICSERVICE** CONTEXT);
FFIERROR basic_service_new(BASICSERVICE** CONTEXT);
FFIERROR service_on_panic_destroy(SERVICEONPANIC** CONTEXT);
FFIERROR service_on_panic_new(SERVICEONPANIC** CONTEXT);
FFIERROR service_on_panic_return_result(const SERVICEONPANIC* CONTEXT, uint32_t ANON1);
uint32_t service_on_panic_return_default_value(const SERVICEONPANIC* CONTEXT, uint32_t X);
const char* service_on_panic_return_ub_on_panic(SERVICEONPANIC* CONTEXT);
FFIERROR service_callbacks_destroy(SERVICECALLBACKS** CONTEXT);
FFIERROR service_callbacks_new(SERVICECALLBACKS** CONTEXT);
FFIERROR service_callbacks_callback_simple(SERVICECALLBACKS* CONTEXT, MYCALLBACK CALLBACK);
FFIERROR service_callbacks_callback_ffi_return(SERVICECALLBACKS* CONTEXT, SUMDELEGATERETURN CALLBACK);
FFIERROR service_callbacks_callback_with_slice(SERVICECALLBACKS* CONTEXT, SUMDELEGATERETURN CALLBACK, SLICEI32 INPUT);
FFIERROR service_callbacks_invoke_delegates(const SERVICECALLBACKS* CONTEXT);
FFIERROR service_ignoring_methods_destroy(SERVICEIGNORINGMETHODS** CONTEXT);
FFIERROR service_ignoring_methods_new(SERVICEIGNORINGMETHODS** CONTEXT);
FFIERROR service_multiple_ctors_destroy(SERVICEMULTIPLECTORS** CONTEXT);
FFIERROR service_multiple_ctors_new_with(SERVICEMULTIPLECTORS** CONTEXT, uint32_t SOME_VALUE);
FFIERROR service_multiple_ctors_new_without(SERVICEMULTIPLECTORS** CONTEXT);
FFIERROR service_multiple_ctors_new_with_string(SERVICEMULTIPLECTORS** CONTEXT, const char* ANON0);
FFIERROR service_multiple_ctors_new_failing(SERVICEMULTIPLECTORS** CONTEXT, uint8_t SOME_VALUE);
FFIERROR service_using_lifetimes_destroy(SERVICEUSINGLIFETIMES** CONTEXT);
FFIERROR service_using_lifetimes_new_with(SERVICEUSINGLIFETIMES** CONTEXT, const uint32_t* SOME_VALUE);
const char* service_using_lifetimes_return_string_accept_slice(SERVICEUSINGLIFETIMES* ANON0, SLICEU8 ANON1);
FFIERROR service_various_slices_destroy(SERVICEVARIOUSSLICES** CONTEXT);
FFIERROR service_various_slices_new(SERVICEVARIOUSSLICES** CONTEXT);
uint8_t service_various_slices_mut_self(SERVICEVARIOUSSLICES* CONTEXT, SLICEU8 SLICE);
uint8_t service_various_slices_mut_self_ref(SERVICEVARIOUSSLICES* CONTEXT, const uint8_t* X, uint8_t* Y);
uint8_t service_various_slices_mut_self_ref_slice(SERVICEVARIOUSSLICES* CONTEXT, const uint8_t* X, uint8_t* Y, SLICEU8 SLICE);
uint8_t service_various_slices_mut_self_ref_slice_limited(SERVICEVARIOUSSLICES* CONTEXT, const uint8_t* X, uint8_t* Y, SLICEU8 SLICE, SLICEU8 SLICE2);
FFIERROR service_various_slices_mut_self_ffi_error(SERVICEVARIOUSSLICES* CONTEXT, SLICEMUTU8 SLICE);
FFIERROR service_various_slices_mut_self_no_error(SERVICEVARIOUSSLICES* CONTEXT, SLICEMUTU8 SLICE);
SLICEU32 service_various_slices_return_slice(SERVICEVARIOUSSLICES* CONTEXT);
SLICEMUTU32 service_various_slices_return_slice_mut(SERVICEVARIOUSSLICES* CONTEXT);
FFIERROR service_strings_destroy(SERVICESTRINGS** CONTEXT);
FFIERROR service_strings_new(SERVICESTRINGS** CONTEXT);
const char* service_strings_return_string(SERVICESTRINGS* CONTEXT);