tests/tests/cpython_benchmarks/reference_project.py


    c_lib.primitive_bool.restype = ctypes.c_bool
    c_lib.primitive_u8.restype = ctypes.c_uint8
    c_lib.primitive_u16.restype = ctypes.c_uint16
    c_lib.primitive_u32.restype = ctypes.c_uint32
    c_lib.primitive_u64.restype = ctypes.c_uint64
    c_lib.primitive_i8.restype = ctypes.c_int8
    c_lib.primitive_i16.restype = ctypes.c_int16
    c_lib.primitive_i32.restype = ctypes.c_int32
    c_lib.primitive_i64.restype = ctypes.c_int64
    c_lib.packed_to_packed1.restype = Packed2
    c_lib.many_args_5.restype = ctypes.c_int64
    c_lib.many_args_10.restype = ctypes.c_int64
    c_lib.ptr.restype = ctypes.POINTER(ctypes.c_int64)
    c_lib.ptr_mut.restype = ctypes.POINTER(ctypes.c_int64)
    c_lib.ptr_ptr.restype = ctypes.POINTER(ctypes.POINTER(ctypes.c_int64))
    c_lib.ref_simple.restype = ctypes.POINTER(ctypes.c_int64)
    c_lib.ref_mut_simple.restype = ctypes.POINTER(ctypes.c_int64)
    c_lib.ref_option.restype = ctypes.c_bool
    c_lib.ref_mut_option.restype = ctypes.c_bool
    c_lib.call_tupled.restype = Tupled
    c_lib.complex_args_1.restype = ctypes.c_int
    c_lib.callback.restype = ctypes.c_uint8
    c_lib.generic_1a.restype = ctypes.c_uint32
    c_lib.generic_1b.restype = ctypes.c_uint8
    c_lib.generic_1c.restype = ctypes.c_uint8
    c_lib.generic_2.restype = ctypes.c_uint8
    c_lib.generic_3.restype = ctypes.c_uint8
    c_lib.generic_4.restype = ctypes.c_uint8
    c_lib.array_1.restype = ctypes.c_uint8
    c_lib.array_2.restype = Array
    c_lib.nested_array_1.restype = NestedArray
    c_lib.nested_array_3.restype = ctypes.c_uint8
    c_lib.char_array_1.restype = CharArray
    c_lib.char_array_2.restype = CharArray
    c_lib.char_array_3.restype = ctypes.c_uint8
    c_lib.bool_field.restype = ctypes.c_bool
    c_lib.documented.restype = ctypes.c_int
    c_lib.ambiguous_1.restype = Vec1
    c_lib.ambiguous_2.restype = Vec2
    c_lib.ambiguous_3.restype = ctypes.c_bool
    c_lib.namespaced_type.restype = Vec
    c_lib.namespaced_inner_option.restype = OptionVec
    c_lib.namespaced_inner_slice.restype = SliceVec
    c_lib.namespaced_inner_slice_mut.restype = SliceMutVec
    c_lib.panics.restype = ctypes.c_int
    c_lib.renamed.restype = ctypes.c_int
    c_lib.weird_1.restype = ctypes.c_bool
    c_lib.repr_transparent.restype = Tupled
    c_lib.pattern_ascii_pointer_1.restype = ctypes.c_uint32
    c_lib.pattern_ascii_pointer_2.restype = ctypes.POINTER(ctypes.c_char)
    c_lib.pattern_ascii_pointer_3.restype = ctypes.POINTER(ctypes.c_char)
    c_lib.pattern_ascii_pointer_4.restype = ctypes.POINTER(ctypes.c_char)
    c_lib.pattern_ascii_pointer_5.restype = ctypes.c_uint8
    c_lib.pattern_ascii_pointer_return_slice.restype = SliceUseAsciiStringPattern
    c_lib.pattern_ffi_slice_1.restype = ctypes.c_uint32
    c_lib.pattern_ffi_slice_1b.restype = ctypes.c_uint32
    c_lib.pattern_ffi_slice_2.restype = Vec3f32
    c_lib.pattern_ffi_slice_delegate.restype = ctypes.c_uint8
    c_lib.pattern_ffi_slice_delegate_huge.restype = Vec3f32
    c_lib.pattern_ffi_option_1.restype = OptionInner
    c_lib.pattern_ffi_option_2.restype = Inner
    c_lib.pattern_ffi_bool.restype = ctypes.c_uint8
    c_lib.pattern_ffi_cchar.restype = ctypes.c_char
    c_lib.pattern_ffi_cchar_const_pointer.restype = ctypes.POINTER(ctypes.c_char)
    c_lib.pattern_ffi_cchar_mut_pointer.restype = ctypes.POINTER(ctypes.c_char)
    c_lib.pattern_api_guard.restype = ctypes.c_uint64
    c_lib.pattern_callback_1.restype = ctypes.c_uint32
    c_lib.pattern_callback_2.restype = ctypes.CFUNCTYPE(None, ctypes.c_void_p)
    c_lib.pattern_callback_4.restype = ctypes.c_uint32
    c_lib.pattern_callback_5.restype = ctypes.CFUNCTYPE(None, )
    c_lib.pattern_callback_6.restype = ctypes.CFUNCTYPE(ctypes.c_int32, ctypes.c_int32, ctypes.c_int32)
    c_lib.pattern_callback_7.restype = ctypes.c_int
    c_lib.basic_service_destroy.restype = ctypes.c_int
    c_lib.basic_service_new.restype = ctypes.c_int
    c_lib.service_on_panic_destroy.restype = ctypes.c_int
    c_lib.service_on_panic_new.restype = ctypes.c_int
    c_lib.service_on_panic_return_result.restype = ctypes.c_int
    c_lib.service_on_panic_return_default_value.restype = ctypes.c_uint32
    c_lib.service_on_panic_return_ub_on_panic.restype = ctypes.POINTER(ctypes.c_char)
    c_lib.service_callbacks_destroy.restype = ctypes.c_int
    c_lib.service_callbacks_new.restype = ctypes.c_int
    c_lib.service_callbacks_callback_simple.restype = ctypes.c_int
    c_lib.service_callbacks_callback_ffi_return.restype = ctypes.c_int
    c_lib.service_callbacks_callback_with_slice.restype = ctypes.c_int
    c_lib.service_callbacks_invoke_delegates.restype = ctypes.c_int
    c_lib.service_ignoring_methods_destroy.restype = ctypes.c_int
    c_lib.service_ignoring_methods_new.restype = ctypes.c_int
    c_lib.service_multiple_ctors_destroy.restype = ctypes.c_int
    c_lib.service_multiple_ctors_new_with.restype = ctypes.c_int
    c_lib.service_multiple_ctors_new_without.restype = ctypes.c_int
    c_lib.service_multiple_ctors_new_with_string.restype = ctypes.c_int
    c_lib.service_multiple_ctors_new_failing.restype = ctypes.c_int
    c_lib.service_using_lifetimes_destroy.restype = ctypes.c_int
    c_lib.service_using_lifetimes_new_with.restype = ctypes.c_int
    c_lib.service_using_lifetimes_return_string_accept_slice.restype = ctypes.POINTER(ctypes.c_char)
    c_lib.service_various_slices_destroy.restype = ctypes.c_int
    c_lib.service_various_slices_new.restype = ctypes.c_int
    c_lib.service_various_slices_mut_self.restype = ctypes.c_uint8
    c_lib.service_various_slices_mut_self_ref.restype = ctypes.c_uint8
    c_lib.service_various_slices_mut_self_ref_slice.restype = ctypes.c_uint8
    c_lib.service_various_slices_mut_self_ref_slice_limited.restype = ctypes.c_uint8
    c_lib.service_various_slices_mut_self_ffi_error.restype = ctypes.c_int
    c_lib.service_various_slices_mut_self_no_error.restype = ctypes.c_int
    c_lib.service_various_slices_return_slice.restype = SliceU32
    c_lib.service_various_slices_return_slice_mut.restype = SliceMutU32
    c_lib.service_strings_destroy.restype = ctypes.c_int
    c_lib.service_strings_new.restype = ctypes.c_int
    c_lib.service_strings_return_string.restype = ctypes.POINTER(ctypes.c_char)

    c_lib.complex_args_1.errcheck = lambda rval, _fptr, _args: _errcheck(rval, 0)
    c_lib.panics.errcheck = lambda rval, _fptr, _args: _errcheck(rval, 0)
    c_lib.pattern_callback_7.errcheck = lambda rval, _fptr, _args: _errcheck(rval, 0)
    c_lib.basic_service_destroy.errcheck = lambda rval, _fptr, _args: _errcheck(rval, 0)
    c_lib.basic_service_new.errcheck = lambda rval, _fptr, _args: _errcheck(rval, 0)
    c_lib.service_on_panic_destroy.errcheck = lambda rval, _fptr, _args: _errcheck(rval, 0)
    c_lib.service_on_panic_new.errcheck = lambda rval, _fptr, _args: _errcheck(rval, 0)
    c_lib.service_on_panic_return_result.errcheck = lambda rval, _fptr, _args: _errcheck(rval, 0)
    c_lib.service_callbacks_destroy.errcheck = lambda rval, _fptr, _args: _errcheck(rval, 0)
    c_lib.service_callbacks_new.errcheck = lambda rval, _fptr, _args: _errcheck(rval, 0)
    c_lib.service_callbacks_callback_simple.errcheck = lambda rval, _fptr, _args: _errcheck(rval, 0)
    c_lib.service_callbacks_callback_ffi_return.errcheck = lambda rval, _fptr, _args: _errcheck(rval, 0)
    c_lib.service_callbacks_callback_with_slice.errcheck = lambda rval, _fptr, _args: _errcheck(rval, 0)
    c_lib.service_callbacks_invoke_delegates.errcheck = lambda rval, _fptr, _args: _errcheck(rval, 0)
    c_lib.service_ignoring_methods_destroy.errcheck = lambda rval, _fptr, _args: _errcheck(rval, 0)
    c_lib.service_ignoring_methods_new.errcheck = lambda rval, _fptr, _args: _errcheck(rval, 0)
    c_lib.service_multiple_ctors_destroy.errcheck = lambda rval, _fptr, _args: _errcheck(rval, 0)
    c_lib.service_multiple_ctors_new_with.errcheck = lambda rval, _fptr, _args: _errcheck(rval, 0)
    c_lib.service_multiple_ctors_new_without.errcheck = lambda rval, _fptr, _args: _errcheck(rval, 0)
    c_lib.service_multiple_ctors_new_with_string.errcheck = lambda rval, _fptr, _args: _errcheck(rval, 0)
    c_lib.service_multiple_ctors_new_failing.errcheck = lambda rval, _fptr, _args: _errcheck(rval, 0)
    c_lib.service_using_lifetimes_destroy.errcheck = lambda rval, _fptr, _args: _errcheck(rval, 0)
    c_lib.service_using_lifetimes_new_with.errcheck = lambda rval, _fptr, _args: _errcheck(rval, 0)
    c_lib.service_various_slices_destroy.errcheck = lambda rval, _fptr, _args: _errcheck(rval, 0)
    c_lib.service_various_slices_new.errcheck = lambda rval, _fptr, _args: _errcheck(rval, 0)
    c_lib.service_various_slices_mut_self_ffi_error.errcheck = lambda rval, _fptr, _args: _errcheck(rval, 0)
    c_lib.service_various_slices_mut_self_no_error.errcheck = lambda rval, _fptr, _args: _errcheck(rval, 0)
    c_lib.service_strings_destroy.errcheck = lambda rval, _fptr, _args: _errcheck(rval, 0)
    c_lib.service_strings_new.errcheck = lambda rval, _fptr, _args: _errcheck(rval, 0)


def primitive_void():
    return c_lib.primitive_void()

def primitive_void2():
    return c_lib.primitive_void2()

def primitive_bool(x: bool) -> bool:
    return c_lib.primitive_bool(x)

def primitive_u8(x: int) -> int:
    return c_lib.primitive_u8(x)

def primitive_u16(x: int) -> int:
    return c_lib.primitive_u16(x)

def primitive_u32(x: int) -> int:
    return c_lib.primitive_u32(x)

def primitive_u64(x: int) -> int:
    return c_lib.primitive_u64(x)

def primitive_i8(x: int) -> int:
    return c_lib.primitive_i8(x)

def primitive_i16(x: int) -> int:
    return c_lib.primitive_i16(x)

def primitive_i32(x: int) -> int:
    return c_lib.primitive_i32(x)

def primitive_i64(x: int) -> int:
    return c_lib.primitive_i64(x)

def packed_to_packed1(a: Packed1) -> Packed2:
    return c_lib.packed_to_packed1(a)

def many_args_5(x0: int, x1: int, x2: int, x3: int, x4: int) -> int:
    return c_lib.many_args_5(x0, x1, x2, x3, x4)

def many_args_10(x0: int, x1: int, x2: int, x3: int, x4: int, x5: int, x6: int, x7: int, x8: int, x9: int) -> int:
    return c_lib.many_args_10(x0, x1, x2, x3, x4, x5, x6, x7, x8, x9)

def ptr(x: ctypes.POINTER(ctypes.c_int64)) -> ctypes.POINTER(ctypes.c_int64):
    return c_lib.ptr(x)

def ptr_mut(x: ctypes.POINTER(ctypes.c_int64)) -> ctypes.POINTER(ctypes.c_int64):
    """ # Safety

 Parameter x must point to valid data."""
    return c_lib.ptr_mut(x)

def ptr_ptr(x: ctypes.POINTER(ctypes.POINTER(ctypes.c_int64))) -> ctypes.POINTER(ctypes.POINTER(ctypes.c_int64)):
    return c_lib.ptr_ptr(x)

def ref_simple(x: ctypes.POINTER(ctypes.c_int64)) -> ctypes.POINTER(ctypes.c_int64):
    return c_lib.ref_simple(x)

def ref_mut_simple(x: ctypes.POINTER(ctypes.c_int64)) -> ctypes.POINTER(ctypes.c_int64):
    return c_lib.ref_mut_simple(x)

def ref_option(x: ctypes.POINTER(ctypes.c_int64)) -> bool:
    return c_lib.ref_option(x)

def ref_mut_option(x: ctypes.POINTER(ctypes.c_int64)) -> bool:
    return c_lib.ref_mut_option(x)

def call_tupled(x: Tupled) -> Tupled:
    return c_lib.call_tupled(x)

def complex_args_1(a: Vec3f32, b: ctypes.POINTER(Tupled)):
    return c_lib.complex_args_1(a, b)

def callback(callback, value: int) -> int:
    if not hasattr(callback, "__ctypes_from_outparam__"):
        callback = callbacks.fn_u8_rval_u8(callback)

    return c_lib.callback(callback, value)

def generic_1a(x: Genericu32, y: Phantomu8) -> int:
    return c_lib.generic_1a(x, y)

def generic_1b(x: Genericu8, y: Phantomu8) -> int:
    return c_lib.generic_1b(x, y)

def generic_1c(x: ctypes.POINTER(Genericu8), y: ctypes.POINTER(Genericu8)) -> int:
    return c_lib.generic_1c(x, y)

def generic_2(x: ctypes.c_void_p) -> int:
    return c_lib.generic_2(x)

def generic_3(x: ctypes.c_void_p) -> int:
    return c_lib.generic_3(x)

def generic_4(x: ctypes.c_void_p) -> int:
    return c_lib.generic_4(x)

def array_1(x: Array) -> int:
    return c_lib.array_1(x)

def array_2() -> Array:
    return c_lib.array_2()
